force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>This object refers to the Appointment logs</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>Appt-{0000}</displayFormat>
        <label>Appointment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>