force-app/main/default/objects/Appointment__c/fields/Clinic_Manager__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Manager__c</fullName>
    <label>Clinic Manager</label>
    <referenceTo>Clinic_Manager__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>