force-app/main/default/objects/Appointment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Physiotherapy and Rehabilitation</fullName>
            </value>
            <value>
                <fullName>Public Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>