force-app/main/default/objects/Appointment__c/fields/Maximum_number_of_patients__c.field-meta.xml
<CustomField>
    <fullName>Maximum_number_of_patients__c</fullName>
    <label>Maximum number of patients</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>