force-app/main/default/objects/Appointment__c/fields/Patients_Attending__c.field-meta.xml
<CustomField>
    <fullName>Patients_Attending__c</fullName>
    <label># Patients Attending</label>
    <summaryForeignKey>Appointment_Patient__c.Appointment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>