force-app/main/default/objects/Appointment__c/fields/Remaining_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Appointment__c</fullName>
    <formula>Maximum_number_of_patients__c  -  Patients_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Appointment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>