force-app/main/default/objects/Appointment__c/validationRules/App_End_Data_is_Less_than_24_hours.validationRule-meta.xml
<ValidationRule>
    <fullName>App_End_Data_is_Less_than_24_hours</fullName>
    <active>false</active>
    <description>End Date/Time must be at-least 1 day ahead of Start Date/Time</description>
    <errorConditionFormula>End_Date_Time__c -  Start_Date_Time__c &lt; 1</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End date and time cannot be less then 24 hours</errorMessage>
</ValidationRule>