force-app/main/default/objects/Appointment__c/validationRules/InPerson_App_Select_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>InPerson_App_Select_Location</fullName>
    <active>false</active>
    <description>You need to select a location because this is an In-Person appointment.</description>
    <errorConditionFormula>ISPICKVAL( Appointment_Type__c , &apos;In-Person&apos;) &amp;&amp;  (Location__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>You need to select a location because this is an In-Person appointment.</errorMessage>
</ValidationRule>