force-app/main/default/objects/Appointment__c/validationRules/Recurring_checked_then_select_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_checked_then_select_Frequency</fullName>
    <active>false</active>
    <description>If recurring is checked, you need to fill the frequency field.</description>
    <errorConditionFormula>(Recurring__c =true &amp;&amp;  ISPICKVAL( Frequency__c , &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>If recurring is checked, you need to fill the frequency field.</errorMessage>
</ValidationRule>