force-app/main/default/objects/Appointment__c/validationRules/Recurring_uchecked_then_no_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_uchecked_then_no_Frequency</fullName>
    <active>false</active>
    <description>If recurring is unchecked, you can&apos;t select a frequency.</description>
    <errorConditionFormula>(Recurring__c =false &amp;&amp;  !ISPICKVAL( Frequency__c , &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>If recurring is unchecked, you can&apos;t select a frequency.</errorMessage>
</ValidationRule>