force-app/main/default/objects/Appointment__c/validationRules/Virtual_App_No_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_App_No_Location</fullName>
    <active>false</active>
    <description>You can&apos;t select a location because this is a virtual appointment.</description>
    <errorConditionFormula>ISPICKVAL( Appointment_Type__c , &apos;Virtual&apos;) &amp;&amp;  !(Location__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>You can&apos;t select a location because this is a virtual appointment.</errorMessage>
</ValidationRule>