force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Department__c</columns>
    <columns>Clinic_Manager__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Remaining_Appointment__c</columns>
    <columns>Appointment_Type__c</columns>
    <columns>Live__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>